--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ language: node_js
 node_js:
   - '0.10'
 
-before_script:
-  - apt-get install libzmq-dev
+before_install:
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq libzmq-dev
