--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ node_js:
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libzmq-dev
+ - sudo apt-get install -qq libzmq3-dev
