process: use winston to display debug message.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prelude-ls": "1.1.x",
     "machine": "4.0.x",
     "rimraf": "^2.3.2",
-    "zmq": "2.10.x"
+    "zmq": "2.10.x",
+    "winston": "1.0.0"
   }
 }
