--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "machine": "4.0.x",
     "rimraf": "^2.3.2",
     "zmq": "2.10.x",
+    "zerorpc": "git://github.com/marrs/zerorpc-node.git",
     "winston": "1.0.0"
   }
 }
