--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^2.3.2",
     "zmq": "2.10.x",
     "zerorpc": "git://github.com/marrs/zerorpc-node.git",
-    "winston": "1.0.0"
+    "winston": "1.0.0",
+    "commander": "2.8.x"
   }
 }
