--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typescript": "^1.5.0-beta"
   },
   "devDependencies": {
+    "chai": "^2.3.0",
     "mocha": "^2.2.5",
     "mocha-testcheck": "^0.1.2"
   },
