test subdir also.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tsd": "tsd --config conf/tsd-test.json reinstall",
     "clean": "rm -r ./built",
     "prepublish": "./node_modules/.bin/tsc --project .",
-    "test": "./node_modules/.bin/mocha -R spec built/test"
+    "test": "./node_modules/.bin/mocha --recursive -R spec built/test"
   },
   "repository": {
     "type": "git",
