--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Yet another coordination language for compositing things of internet.",
   "main": "built/lib/main.js",
   "dependencies": {
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.3.4",
     "typescript": "^1.5.0-beta",
     "zmq": "^2.11.1"
   },
