--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "built/lib/main.js",
   "dependencies": {
     "mkdirp": "^0.5.1",
+    "node-uuid": "^1.4.3",
     "rimraf": "^2.3.4",
     "typescript": "^1.5.0-beta",
+    "uuid": "^2.0.1",
     "zmq": "^2.11.1"
   },
   "devDependencies": {
