--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "rimraf": "^2.3.4",
     "typescript": "^1.5.0-beta",
     "uuid": "^2.0.1",
+    "winston": "^1.0.0",
     "zmq": "^2.11.1"
   },
   "devDependencies": {
