--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
         "./src/lib/main.ts",
         "./src/lib/port.ts",
         "./src/lib/process.ts",
+        "./src/lib/rpc.ts",
+        "./src/lib/token.ts",
         "./src/test/bootstrap-test.d.ts",
         "./src/test/bootstrap.ts",
         "./src/test/unit/test_component.ts",
