--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
         "./typings/lib/rimraf/rimraf.d.ts",
         "./typings/lib/tsd.d.ts",
         "./typings/lib/winston/winston.d.ts",
+        "./typings/lib/zerorpc/zerorpc.d.ts",
         "./typings/test/chai/chai.d.ts",
         "./typings/test/mocha-testcheck.d.ts",
         "./typings/test/mocha/mocha.d.ts",
