--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "./src/test/unit/test_component.ts",
         "./src/test/unit/test_port.ts",
         "./src/test/unit/test_process.ts",
+        "./src/test/unit/test_rpc.ts",
         "./typings/lib/lib.es6.d.ts",
         "./typings/lib/mkdirp/mkdirp.d.ts",
         "./typings/lib/node-uuid/node-uuid.d.ts",
