Re-org Component Module.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,17 +11,22 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
+        "./src/lib/Common.ts",
+        "./src/lib/Component/Component.ts",
+        "./src/lib/Component/ComponentDefinition.ts",
+        "./src/lib/Component/ComponentSource.ts",
+        "./src/lib/Token.ts",
         "./src/lib/component.ts",
         "./src/lib/main.ts",
         "./src/lib/module.ts",
         "./src/lib/port.ts",
         "./src/lib/process.ts",
         "./src/lib/rpc.ts",
-        "./src/lib/token.ts",
         "./src/test/bootstrap-test.d.ts",
         "./src/test/bootstrap.ts",
         "./src/test/helper.ts",
-        "./src/test/unit/test_component.ts",
+        "./src/test/unit/Component/TestComponent.ts",
+        "./src/test/unit/Component/TestComponentSource.ts",
         "./src/test/unit/test_module.ts",
         "./src/test/unit/test_port.ts",
         "./src/test/unit/test_process.ts",
