re-org Port module.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,12 @@
         "./src/lib/Component/Component.ts",
         "./src/lib/Component/ComponentDefinition.ts",
         "./src/lib/Component/ComponentSource.ts",
+        "./src/lib/Port/InPort.ts",
+        "./src/lib/Port/OutPort.ts",
+        "./src/lib/Port/Port.ts",
+        "./src/lib/Port/Ports.ts",
+        "./src/lib/Port/PortsDefinition.ts",
         "./src/lib/Token.ts",
-        "./src/lib/component.ts",
         "./src/lib/main.ts",
         "./src/lib/module.ts",
         "./src/lib/port.ts",
@@ -27,8 +31,10 @@
         "./src/test/helper.ts",
         "./src/test/unit/Component/TestComponent.ts",
         "./src/test/unit/Component/TestComponentSource.ts",
+        "./src/test/unit/Port/TestInPort.ts",
+        "./src/test/unit/Port/TestOutPort.ts",
+        "./src/test/unit/Port/TestPort.ts",
         "./src/test/unit/test_module.ts",
-        "./src/test/unit/test_port.ts",
         "./src/test/unit/test_process.ts",
         "./src/test/unit/test_rpc.ts",
         "./typings/lib/lib.es6.d.ts",
