re-org Module module.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "./src/lib/Component/Component.ts",
         "./src/lib/Component/ComponentDefinition.ts",
         "./src/lib/Component/ComponentSource.ts",
+        "./src/lib/Module.ts",
         "./src/lib/Port/InPort.ts",
         "./src/lib/Port/OutPort.ts",
         "./src/lib/Port/Port.ts",
@@ -24,7 +25,6 @@
         "./src/lib/Process/Process.ts",
         "./src/lib/Process/ProcessInquery.ts",
         "./src/lib/main.ts",
-        "./src/lib/module.ts",
         "./src/lib/rpc.ts",
         "./src/test/bootstrap-test.d.ts",
         "./src/test/bootstrap.ts",
@@ -35,7 +35,7 @@
         "./src/test/unit/Port/TestOutPort.ts",
         "./src/test/unit/Port/TestPort.ts",
         "./src/test/unit/Process/TestProcess.ts",
-        "./src/test/unit/test_module.ts",
+        "./src/test/unit/TestModule.ts",
         "./src/test/unit/test_rpc.ts",
         "./typings/lib/lib.es6.d.ts",
         "./typings/lib/mkdirp/mkdirp.d.ts",
