--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,16 +25,16 @@
         "./src/lib/Process/Process.ts",
         "./src/lib/Process/ProcessInquery.ts",
         "./src/lib/main.ts",
+        "./src/test/Helper.ts",
+        "./src/test/Unit/Component/TestComponent.ts",
+        "./src/test/Unit/Component/TestComponentSource.ts",
+        "./src/test/Unit/Port/TestInPort.ts",
+        "./src/test/Unit/Port/TestOutPort.ts",
+        "./src/test/Unit/Port/TestPort.ts",
+        "./src/test/Unit/Process/TestProcess.ts",
+        "./src/test/Unit/TestModule.ts",
         "./src/test/bootstrap-test.d.ts",
         "./src/test/bootstrap.ts",
-        "./src/test/helper.ts",
-        "./src/test/unit/Component/TestComponent.ts",
-        "./src/test/unit/Component/TestComponentSource.ts",
-        "./src/test/unit/Port/TestInPort.ts",
-        "./src/test/unit/Port/TestOutPort.ts",
-        "./src/test/unit/Port/TestPort.ts",
-        "./src/test/unit/Process/TestProcess.ts",
-        "./src/test/unit/TestModule.ts",
         "./typings/lib/lib.es6.d.ts",
         "./typings/lib/mkdirp/mkdirp.d.ts",
         "./typings/lib/node-uuid/node-uuid.d.ts",
