Extract ProcessOptions, ProcessStatus to Common.ts.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,26 +15,27 @@
         "./src/lib/Component/Component.ts",
         "./src/lib/Component/ComponentDefinition.ts",
         "./src/lib/Component/ComponentSource.ts",
-        "./src/lib/Module.ts",
         "./src/lib/Port/InPort.ts",
         "./src/lib/Port/OutPort.ts",
         "./src/lib/Port/Port.ts",
         "./src/lib/Port/Ports.ts",
         "./src/lib/Port/PortsDefinition.ts",
+        "./src/lib/Process/Common.ts",
         "./src/lib/Process/IncomingQueue.ts",
         "./src/lib/Process/Process.ts",
         "./src/lib/Process/ProcessInquery.ts",
         "./src/lib/main.ts",
+        "./src/lib/module.ts",
         "./src/test/Helper.ts",
-        "./src/test/Unit/Component/TestComponent.ts",
-        "./src/test/Unit/Component/TestComponentSource.ts",
-        "./src/test/Unit/Port/TestInPort.ts",
-        "./src/test/Unit/Port/TestOutPort.ts",
-        "./src/test/Unit/Port/TestPort.ts",
-        "./src/test/Unit/Process/TestProcess.ts",
-        "./src/test/Unit/TestModule.ts",
         "./src/test/bootstrap-test.d.ts",
         "./src/test/bootstrap.ts",
+        "./src/test/unit/Component/TestComponent.ts",
+        "./src/test/unit/Component/TestComponentSource.ts",
+        "./src/test/unit/Port/TestInPort.ts",
+        "./src/test/unit/Port/TestOutPort.ts",
+        "./src/test/unit/Port/TestPort.ts",
+        "./src/test/unit/Process/TestProcess.ts",
+        "./src/test/unit/TestModule.ts",
         "./typings/lib/lib.es6.d.ts",
         "./typings/lib/mkdirp/mkdirp.d.ts",
         "./typings/lib/node-uuid/node-uuid.d.ts",
