Add IC.Component.CompositedComponent.loadCompositedComponent function.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "./src/lib/Component/Component.ts",
         "./src/lib/Component/ComponentDefinition.ts",
         "./src/lib/Component/ComponentSource.ts",
+        "./src/lib/Component/CompositedComponent.ts",
         "./src/lib/Port/InPort.ts",
         "./src/lib/Port/OutPort.ts",
         "./src/lib/Port/Port.ts",
@@ -26,11 +27,12 @@
         "./src/lib/Process/ProcessInquery.ts",
         "./src/lib/main.ts",
         "./src/lib/module.ts",
-        "./src/test/Helper.ts",
         "./src/test/bootstrap-test.d.ts",
         "./src/test/bootstrap.ts",
+        "./src/test/helper.ts",
         "./src/test/unit/Component/TestComponent.ts",
         "./src/test/unit/Component/TestComponentSource.ts",
+        "./src/test/unit/Component/TestCompositedComponent.ts",
         "./src/test/unit/Port/TestInPort.ts",
         "./src/test/unit/Port/TestOutPort.ts",
         "./src/test/unit/Port/TestPort.ts",
